[gd_scene load_steps=31 format=3 uid="uid://co11dmbjerijd"]

[ext_resource type="Script" uid="uid://dtf0dp4gco8cr" path="res://Scripts/Components/States/GameStateManager/GameStateMachine.gd" id="1_gxh85"]
[ext_resource type="Script" uid="uid://cmqtwumjk7b83" path="res://Scripts/Components/States/GameStateManager/MovingState.gd" id="3_txr1d"]
[ext_resource type="PackedScene" uid="uid://d3h8d2gmlpihi" path="res://Scenes/PlayerCharacter.tscn" id="3_w2hnh"]
[ext_resource type="PackedScene" uid="uid://kvuimi0lpjss" path="res://Scenes/Interactable.tscn" id="4_hs0my"]
[ext_resource type="Script" uid="uid://bf7xv8syjd6sq" path="res://Scripts/Components/States/GameStateManager/ExaminingState.gd" id="4_k5fou"]
[ext_resource type="Script" uid="uid://i0kix5c8773f" path="res://Scripts/Managers/DialogueManager.gd" id="4_yumw5"]
[ext_resource type="Script" uid="uid://di2pr4wijhk5v" path="res://Scripts/Components/States/GameStateManager/SelectingDialogueState.gd" id="5_c6h1t"]
[ext_resource type="Script" uid="uid://padmxq4c2tb3" path="res://Scripts/Components/States/GameStateManager/SelectingPickableState.gd" id="5_vhoqr"]
[ext_resource type="Script" uid="uid://lwf05wv74vps" path="res://Scripts/Components/States/GameStateManager/DialoguingState.gd" id="6_gr1pc"]
[ext_resource type="Script" uid="uid://c6uov88ep3um0" path="res://Scripts/Resources/DialogueData.gd" id="6_q7uve"]
[ext_resource type="Script" uid="uid://blq050mju5i0j" path="res://Scripts/Managers/QuestManager.gd" id="9_24dc1"]
[ext_resource type="Script" uid="uid://i1mugvbr2odo" path="res://Scripts/Menus/Dialogue/DialogueMenu.gd" id="9_jnvcw"]
[ext_resource type="Script" uid="uid://o4suqtmav0m5" path="res://Scripts/Menus/Dialogue/DialogueComponent.gd" id="11_lwelu"]
[ext_resource type="Script" uid="uid://dduxilyfxfmci" path="res://Scripts/Managers/InventoryManager.gd" id="13_7fyol"]
[ext_resource type="PackedScene" uid="uid://b3cv72wntst3o" path="res://Scenes/RadialMenu.tscn" id="14_ttu2l"]
[ext_resource type="PackedScene" uid="uid://bbo1rn3dxaict" path="res://Scenes/Rooms/RoomStreet.tscn" id="18_1dp38"]
[ext_resource type="PackedScene" uid="uid://dtdrjth3yf3wh" path="res://Scenes/Rooms/RoomReception.tscn" id="18_cehyh"]
[ext_resource type="PackedScene" uid="uid://bg7o56eyvijhp" path="res://Scenes/Rooms/RoomRoom100.tscn" id="18_n2hfw"]
[ext_resource type="Script" uid="uid://bf3guu8vwd45g" path="res://Scripts/Managers/CameraManager.gd" id="18_qqulp"]
[ext_resource type="PackedScene" uid="uid://e1rhcd0l2beh" path="res://Scenes/Rooms/RoomHotelCorridor.tscn" id="19_voqkq"]
[ext_resource type="PackedScene" uid="uid://bkuex5g252j44" path="res://Scenes/Rooms/RoomRoom101.tscn" id="20_0g5gr"]
[ext_resource type="PackedScene" uid="uid://dno31x8ecaxbr" path="res://Scenes/Rooms/RoomBalcony100.tscn" id="22_777d6"]
[ext_resource type="PackedScene" uid="uid://cnifx6oayjegi" path="res://Scenes/Rooms/RoomBalcony101.tscn" id="23_jyqft"]

[sub_resource type="Animation" id="Animation_m7pv6"]
resource_name = "angry"

[sub_resource type="Animation" id="Animation_mutag"]
resource_name = "happy"

[sub_resource type="Animation" id="Animation_anoue"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_1v7xi"]
resource_name = "inquisitive"

[sub_resource type="Animation" id="Animation_c4god"]
resource_name = "sad"

[sub_resource type="Animation" id="Animation_15rf8"]
resource_name = "surprised"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5hvta"]
_data = {
&"angry": SubResource("Animation_m7pv6"),
&"happy": SubResource("Animation_mutag"),
&"idle": SubResource("Animation_anoue"),
&"inquisitive": SubResource("Animation_1v7xi"),
&"sad": SubResource("Animation_c4god"),
&"surprised": SubResource("Animation_15rf8")
}

[node name="Main" type="Node2D"]
position = Vector2(3111, -644)

[node name="BackGround" type="TextureRect" parent="."]
z_index = -100
texture_filter = 1
offset_left = -1163.0
offset_top = -289.0
offset_right = -8.0
offset_bottom = 361.0
scale = Vector2(3.44462, 2.61239)
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="PlayerCharacter" parent="." instance=ExtResource("3_w2hnh")]
unique_name_in_owner = true
position = Vector2(351, 536)
collision_layer = 3

[node name="GameManagers" type="Node" parent="."]

[node name="GameStateMachine" type="Node" parent="GameManagers" node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("1_gxh85")
initial_state = NodePath("Moving")

[node name="Examining" type="Node" parent="GameManagers/GameStateMachine"]
script = ExtResource("4_k5fou")

[node name="SelectingPickable" type="Node" parent="GameManagers/GameStateMachine"]
script = ExtResource("5_vhoqr")

[node name="SelectingDialogue" type="Node" parent="GameManagers/GameStateMachine"]
script = ExtResource("5_c6h1t")

[node name="Dialoguing" type="Node" parent="GameManagers/GameStateMachine"]
script = ExtResource("6_gr1pc")

[node name="Moving" type="Node" parent="GameManagers/GameStateMachine"]
script = ExtResource("3_txr1d")

[node name="CameraManager" type="Camera2D" parent="GameManagers"]
position = Vector2(3999, -359)
editor_draw_limits = true
script = ExtResource("18_qqulp")

[node name="QuestManager" type="Node" parent="GameManagers"]
script = ExtResource("9_24dc1")

[node name="DialogueManager" type="Node" parent="GameManagers" node_paths=PackedStringArray("dialogue_menu", "dialogue_data", "dialogue_component")]
script = ExtResource("4_yumw5")
dialogue_menu = NodePath("DialogueMenu")
dialogue_data = NodePath("DialogueData")
dialogue_component = NodePath("DialogueComponent")

[node name="DialogueMenu" type="Control" parent="GameManagers/DialogueManager"]
visible = false
z_index = 50
layout_mode = 3
anchors_preset = 0
script = ExtResource("9_jnvcw")

[node name="DialogueComponent" type="Node2D" parent="GameManagers/DialogueManager" node_paths=PackedStringArray("dialogue_frame", "dialogue_text", "dialogue_animator", "portrait_right", "portrait_left")]
visible = false
z_index = 20
script = ExtResource("11_lwelu")
dialogue_frame = NodePath("DialogueFrame")
dialogue_text = NodePath("DialogueText")
dialogue_animator = NodePath("DialogueAnimator")
portrait_right = NodePath("PortraitRight")
portrait_left = NodePath("PortraitLeft")

[node name="DialogueFrame" type="Polygon2D" parent="GameManagers/DialogueManager/DialogueComponent"]
z_index = 1
position = Vector2(575.707, 572.213)
scale = Vector2(1.02788, 1.47541)
color = Color(0.984314, 0.984314, 0, 1)
polygon = PackedVector2Array(402, -93, -384, -85, -377.164, -28.2078, -371, 23, 405, 29)

[node name="DialogueText" type="RichTextLabel" parent="GameManagers/DialogueManager/DialogueComponent"]
self_modulate = Color(0.122185, 0.067379, 0.0128321, 1)
z_index = 2
offset_left = 227.0
offset_top = 462.0
offset_right = 957.0
offset_bottom = 575.0
bbcode_enabled = true

[node name="DialogueContinueText" type="RichTextLabel" parent="GameManagers/DialogueManager/DialogueComponent"]
self_modulate = Color(0, 0, 0, 1)
offset_left = 955.0
offset_top = 561.0
offset_right = 1019.0
offset_bottom = 617.0
bbcode_enabled = true
text = "[font_size=30]A[/font_size]"

[node name="PortraitLeft" type="Sprite2D" parent="GameManagers/DialogueManager/DialogueComponent"]
position = Vector2(160, 525)

[node name="PortraitRight" type="Sprite2D" parent="GameManagers/DialogueManager/DialogueComponent"]
position = Vector2(1014, 518)

[node name="DialogueAnimator" type="AnimationPlayer" parent="GameManagers/DialogueManager/DialogueComponent"]
libraries = {
&"": SubResource("AnimationLibrary_5hvta")
}

[node name="DialogueData" type="Node" parent="GameManagers/DialogueManager"]
unique_name_in_owner = true
script = ExtResource("6_q7uve")

[node name="InventoryManager" type="Node" parent="GameManagers" node_paths=PackedStringArray("radial_menu_canvas", "radial_menu", "player_character")]
script = ExtResource("13_7fyol")
radial_menu_canvas = NodePath("RadialMenuCanvas")
radial_menu = NodePath("RadialMenuCanvas/RadialMenuComponent")
player_character = NodePath("../../PlayerCharacter")

[node name="RadialMenuCanvas" type="CanvasLayer" parent="GameManagers/InventoryManager"]

[node name="RadialMenuComponent" parent="GameManagers/InventoryManager/RadialMenuCanvas" node_paths=PackedStringArray("player_character") instance=ExtResource("14_ttu2l")]
offset_left = 3111.0
offset_top = -644.0
offset_right = 3111.0
offset_bottom = -644.0
player_character = NodePath("../../../../PlayerCharacter")
metadata/_edit_use_anchors_ = true

[node name="TestObjects" type="Node2D" parent="."]
position = Vector2(3514, 1214)

[node name="obs_bathtub_bathroom01" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(382, 190)

[node name="obs_towel_bathroom01" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(381, 85)

[node name="obs_mirror_bathroom01" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(392, 308)

[node name="pic_hoodie_sewers" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(541, 97)

[node name="pic_footprints_bathroom01" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(548, 307)

[node name="pic_room101key" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(544, 193)

[node name="char_golot" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(91, 95)

[node name="char_thierry" parent="TestObjects" instance=ExtResource("4_hs0my")]
position = Vector2(90, 202)

[node name="RoomReception" parent="." instance=ExtResource("18_cehyh")]
z_index = -1
offset_left = -70.0
offset_top = -259.0
offset_right = -70.0
offset_bottom = -259.0
metadata/_edit_use_anchors_ = true

[node name="RoomStreet" parent="." instance=ExtResource("18_1dp38")]
offset_left = -3953.0
offset_top = -204.0
offset_right = -3953.0
offset_bottom = -204.0
metadata/_edit_use_anchors_ = true

[node name="RoomRoom100" parent="." instance=ExtResource("18_n2hfw")]
offset_left = -1965.0
offset_top = -1672.0
offset_right = -1965.0
offset_bottom = -1672.0
metadata/_edit_use_anchors_ = true

[node name="RoomBalcony100" parent="." instance=ExtResource("22_777d6")]
offset_left = -4087.0
offset_top = -1637.0
offset_right = -4087.0
offset_bottom = -1637.0
metadata/_edit_use_anchors_ = true

[node name="RoomHotelCorridor" parent="." instance=ExtResource("19_voqkq")]
offset_left = 175.0
offset_top = -1614.0
offset_right = 175.0
offset_bottom = -1614.0
metadata/_edit_use_anchors_ = true

[node name="RoomRoom101" parent="." instance=ExtResource("20_0g5gr")]
offset_left = 2336.0
offset_top = -1596.0
offset_right = 2336.0
offset_bottom = -1596.0
metadata/_edit_use_anchors_ = true

[node name="RoomBalcony101" parent="." instance=ExtResource("23_jyqft")]
offset_left = 4346.0
offset_top = -1587.0
offset_right = 4346.0
offset_bottom = -1587.0
metadata/_edit_use_anchors_ = true
